# api-client-core

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/api_client_core/: __init__.py  constants.py  logging.py  types.py
src/api_client_core/base/: __init__.py  api_class.py  api_client.py
src/api_client_core/cfg/: logging.yaml
src/api_client_core/endpoints/: endpoint.py  endpoint_factory.py  endpoint_func.py  endpoint_handler.py  stats.py
src/api_client_core/endpoints/endpoint_func/: __init__.py  _typing.py  call_wrapper_mixins.py  call_wrappers.py  decorators.py  endpoint_func.py
src/api_client_core/endpoints/utils/: endpoint_call.py  endpoint_model.py  param_type.py
tests/: conftest.py  test_api_class.py  test_api_client.py  test_logging.py  test_types.py
tests/tests_endpoints/: test_endpoint.py  test_endpoint_factory.py  test_endpoint_func.py  test_endpoint_func_call.py  test_endpoint_handler.py  test_endpoint_stats.py
tests/tests_endpoints/tests_endpoint_func/: test_endpoint_func.py  test_endpoint_func_call.py  test_endpoint_func_call_wrappers.py
tests/tests_endpoints/tests_utils/: test_endpoint_call.py  test_endpoint_model.py  test_param_type.py
